Enhance README with Plurl library details
Expanded README to include detailed information about Plurl library, its functionality, use cases, and limitations.

Signed-off-by: Christoph Rueger <chrisrueger@gmail.com>